--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,45 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-  <head>
-    <title>Getting Started</title>
-    <script src="https://unpkg.com/lodash@4.16.6"></script>
-  </head>
-  <body>
-    <script src="main.js"></script>
-</body>
+    <head> 
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>Yoga</title>
+        <link rel="stylesheet" href="assets/styles/app.css">
+    </head>
+    <body>
+        <nav>
+            <div class="nav__menu">
+                <ul>
+                    <li><img src="assets/images/logo-main-small.webp" class="nav__logo" alt=""></li>
+                    <li>
+                        <a href="#">Home</a>
+                    </li>
+                    <li class="nav__dropdown">
+                        <a href="#">Our studio</a>
+                            <ul class="nav__dropdown__content">
+                                <li><a href="#">Home</a></li>
+                                <li><a href="#">Home</a></li>
+                                <li><a href="#">Home</a></li>
+                            </ul>
+                    </li>
+                    <li>
+                        <a href="#">Yoga Classes</a>
+                    </li>
+                    <li>
+                        <a href="#">Schedule</a>
+                    </li>
+                    <li>
+                        <a href="#">Prices</a>
+                    </li>
+                    <li>
+                        <a href="#">Blog</a>
+                    </li>
+                    <li>
+                        <a href="#">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </body>
 </html>
