--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Yoga</title>
-        <link rel="stylesheet" href="assets/styles/app.css">
+        <link rel="stylesheet" href="./app.css">
     </head>
     <body>
         <nav>
             <div class="nav__menu">
                 <ul>
-                    <li><img src="assets/images/logo-main-small.webp" class="nav__logo" alt=""></li>
+                    <li><img src="./assets/images/logo-main-small.webp" class="nav__logo" alt=""></li>
                     <li>
                         <a href="#">Home</a>
                     </li>
@@ -41,5 +41,6 @@
                 </ul>
             </div>
         </nav>
+        <div class="head"></div>
     </body>
 </html>
