--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Yoga</title>
-        <link rel="stylesheet" href="./app.css">
+        <link rel="stylesheet" href="./assets/app.css">
     </head>
     <body>
         <nav>
@@ -41,6 +41,16 @@
                 </ul>
             </div>
         </nav>
-        <div class="head"></div>
+        <div class="head">
+            <div class="head_greeting">
+                <h1>Relax. Breathe. Be Mindful.</h1>
+                <span>A yoga class for every body, every style, every day.</span>
+            </div>
+        </div>
+        <div class="welcome">
+            
+        </div>
+        <div class="content"></div>
+
     </body>
 </html>
