--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,5 @@
+// Reikia padaryt, kad nav bare pasikeistu ir išliktų spalva uzejus su pele
+
 <!DOCTYPE html>
 <html>
 <head> 
@@ -43,7 +45,7 @@
             </ul>
         </div>
     </nav>
-    <div class="head">        
+    <div class="head">      
     </div>
     <div class="head__overlay">
         <div class="head__greeting">
@@ -52,18 +54,22 @@
             <span>A yoga class for every body, every style, every day.</span>
                 <div class="button">
                     <a href="#">Welcome to Seven Yoga studio</a>
-                </div>
+                </div>  
         </div>
     </div>
+
     <div class="welcome">
-        <div class="welcome__left">
-            <h1>Welcome To The7 Yoga Studio</h1>
-        </div>
-        <div class="welcome__right">
-            <span>Ut egestas augue ac molestie pharetra. Sed porta dui quis imperdiet consectetur. Vivamus tincidunt, turpis non pulvinar scelerisque, nunc arcu blandit diam, ac convallis lectus sem in odio. Nulla tincidunt tincidunt sem, sit amet condimentum ex mollis rutrum. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Morbi elit leo, malesuada sit amet pretium eget, tincidunt in sem. Vivamus purus dolor, auctor iaculis leo in, porta semper lorem. Nullam rhoncus euismod risus vel dignissim. Etiam sodales ante dui. Morbi pellentesque rutrum scelerisque. Sed auctor luctus nisl dignissim volutpat. Praesent in tortor hendrerit, interdum elit blandit, volutpat nibh. Cras rutrum est et velit semper sodales. Nam nec aliquet mauris.
-            </span>
+        <div class="welcome__content">
+            <div class="welcome__content__left">
+                <h1>Welcome To The7 Yoga Studio</h1>
+            </div>
+            <div class="welcome__content__right">
+                <span>Ut egestas augue ac molestie pharetra. Sed porta dui quis imperdiet consectetur. Vivamus tincidunt, turpis non pulvinar scelerisque, nunc arcu blandit diam, ac convallis lectus sem in odio. Nulla tincidunt tincidunt sem, sit amet condimentum ex mollis rutrum. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Morbi elit leo, malesuada sit amet pretium eget, tincidunt in sem. Vivamus purus dolor, auctor iaculis leo in, porta semper lorem. Nullam rhoncus euismod risus vel dignissim. Etiam sodales ante dui. Morbi pellentesque rutrum scelerisque. Sed auctor luctus nisl dignissim volutpat. Praesent in tortor hendrerit, interdum elit blandit, volutpat nibh. Cras rutrum est et velit semper sodales. Nam nec aliquet mauris.
+                </span>
+            </div>
         </div>
     </div>
+
     <div class="classes">
         <div class="classes__header">
             <h2>Choose your class</h2>
@@ -85,13 +91,97 @@
                 <span>Duis lobortis mollis, felis libero mollis ornare, est at lobortis mollis, felis libero mollis orci, vitae congue neque lectus vel neque.</span>
             </div>
             <div class="classes__content__image classes__content__image__3"></div>
- <div class="classes__content__text">
+            <div class="classes__content__text">
                 <h3>Pilates</h3>
                 <span>Duis ornare, est at lobortis mollis, felis vlibero mollis orci, vitae congue neque lectus vel neque.</span>
             </div>
             <div class="classes__content__image classes__content__image__4"></div>
         </div>
-        <div class="classes__footer"></div>
+        <div class="classes__footer">
+            <div class="button">
+                    <a href="#">About yoga classes</a>
+                </div>
+        </div>
     </div>
+
+    <div class="timetable">
+        <div class="timetable__left">
+            <div class="timetable__left__header">
+                <h2>Classes timetable</h2>
+            </div>
+            <div class="calendar">
+                <div class="calendar__month">
+                    <div class="calendar__month__corner">
+                    <span>FEBRUARY ></span>
+                </div>
+                <h2>JANUARY 2020</h2>
+                <div class="calendar__table__head">
+                    <div class="calendar__day__head">MO</div>
+                    <div class="calendar__day__head">TU</div>
+                    <div class="calendar__day__head">WE</div>
+                    <div class="calendar__day__head">TH</div>
+                    <div class="calendar__day__head">FR</div>
+                    <div class="calendar__day__head">SA</div>
+                    <div class="calendar__day__head">SU</div>
+                </div>
+                <div class="calendar__table__row">
+                    <div class="calendar__day__null">30</div>
+                    <div class="calendar__day__null">31</div>
+                    <div class="calendar__day">1</div>
+                    <div class="calendar__day">2</div>
+                    <div class="calendar__day">3</div>
+                    <div class="calendar__day">4</div>
+                    <div class="calendar__day">5</div>
+                </div>
+                <div class="calendar__table__row">
+                    <div class="calendar__day">6</div>
+                    <div class="calendar__day">7</div>
+                    <div class="calendar__day">8</div>
+                    <div class="calendar__day">9</div>
+                    <div class="calendar__day">10</div>
+                    <div class="calendar__day">11</div>
+                    <div class="calendar__day">12</div>
+                </div>
+                <div class="calendar__table__row">
+                    <div class="calendar__day">13</div>
+                    <div class="calendar__day">14</div>
+                    <div class="calendar__day">15</div>
+                    <div class="calendar__day">16</div>
+                    <div class="calendar__day">17</div>
+                    <div class="calendar__day">18</div>
+                    <div class="calendar__day">19</div>
+                </div>
+                <div class="calendar__table__row">
+                    <div class="calendar__day">20</div>
+                    <div class="calendar__day">21</div>
+                    <div class="calendar__day">22</div>
+                    <div class="calendar__day">23</div>
+                    <div class="calendar__day">24</div>
+                    <div class="calendar__day">25</div>
+                    <div class="calendar__day">26</div>
+                </div>
+                <div class="calendar__table__row">
+                    <div class="calendar__day__today">27</div>
+                    <div class="calendar__day__event">28</div>
+                    <div class="calendar__day__event">29</div>
+                    <div class="calendar__day__event">30</div>
+                    <div class="calendar__day__event">31</div>
+                    <div class="calendar__day__null">1</div>
+                    <div class="calendar__day__null">2</div>
+                </div>
+
+
+
+                </div>
+                <div class="calendar__events"></div>
+            </div>
+
+        </div>
+        <div class="timetable__right">
+
+        </div>
+
+    </div>
+
     <script type="text/javascript" src="main.js"></script></body>
 </html>
