--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,3 @@
-// Reikia padaryt, kad nav bare pasikeistu ir išliktų spalva uzejus su pele
-
 <!DOCTYPE html>
 <html>
 <head> 
@@ -11,7 +9,7 @@
 <link href="assets/app.css" rel="stylesheet"></head>
 <body>
     <nav>
-        <div class="nav__menu">
+        <div class="nav__menu" id="nav">
             <ul>
                 <li><img src="./assets/images/logo-main-small.webp" class="nav__logo" alt=""></li>
                 <li>
@@ -45,6 +43,21 @@
             </ul>
         </div>
     </nav>
+    
+    <script type="text/javascript">
+        var lastScrollTop = 0;
+            navbar = document.getElementById("nav");
+        window.addEventListener("scroll", function(){
+            var scrollTop = window.pageYOffset || document
+                .documentElement.scrollTop;
+                if (scrollTop > lastScrollTop){
+                    navbar.style.top="-100px";
+                } else {
+                    navbar.style.top="0";
+                }
+                lastScrollTop = scrollTop;
+        })
+    </script>
     <div class="head">      
     </div>
     <div class="head__overlay">
@@ -206,6 +219,8 @@
         </div>
 
     </div>
-
+    <div class="studio">
+        
+    </div>
     <script type="text/javascript" src="main.js"></script></body>
 </html>
